# monad-trace

./: monad-trace.cabal
src/Control/Monad/: Trace.hs
src/Control/Monad/Trace/: Class.hs
src/Control/Monad/Trans/: Trace.hs
