name:                  monad-trace
version:               0.1.0.0
license:               MIT
license-file:          LICENSE
author:                Martin Avanzini
maintainer:            martin.avanzini@uibk.ac.at
category:              Debug
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:
                       Control.Monad.Trace
                       Control.Monad.Trace.Class
                       Control.Monad.Trans.Trace

  build-depends:       base >= 4.8,
                       containers >=0.5,
                       transformers >=0.4,
                       mtl >=2.2

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       GeneralizedNewtypeDeriving,
                       FlexibleInstances,
                       FlexibleContexts,
                       FunctionalDependencies,
                       MultiParamTypeClasses,
                       StandaloneDeriving
